syntax = "proto3";
option go_package = "ffi/proto";

message TurboDataDirResp {
    string dir = 1;
}

message GlobReq {
	string base_path = 1;
	repeated string include_patterns = 2;
  repeated string exclude_patterns = 3;
  bool files_only = 4; // note that the default for a bool is false
}

message GlobResp {
  oneof response {
    GlobRespList files = 1;
    string error = 2;
  }
}

message GlobRespList {
  repeated string files = 1;
}

message TransitiveDepsRequest {
  bytes contents = 1;
  string workspace_dir = 2;
  map<string, string> unresolved_deps = 3;
}

message TransitiveDepsResponse {
  oneof response {
    LockfilePackageList packages = 1;
    string error = 2;
  }
}

message LockfilePackage {
  string key = 1;
  string version = 2;
  bool found = 3;
}

message LockfilePackageList {
  repeated LockfilePackage list = 1;
}

message SubgraphRequest {
  bytes contents = 1;
  repeated string workspaces = 2;
  repeated string packages = 3;
}

message SubgraphResponse {
  oneof response {
    bytes contents = 1;
    string error = 2;
  }
}
